Apache Solr integration 6.x-3.x, xxxx-xx-xx
------------------------------
Issue #592522 by Nick_vh, pwolanin | quaoar: Fixed Hooks node_type(), taxonomy and user knocks out our database server.
Issue #1394276 by Nick_vh, pwolanin: Fixed Bad logic for last indexed timestamp.
Issue #1388916 by pwolanin, rwohleb: Fixed Bad port validator.
Issue #1391850 by cpliakas: Fixed Fatal error when Solr server is not available on non-search pages that are showing facet blocks.
Issue #1389306 by Nick_vh: Fixed Wrong helptext link if facetapi is not installed.
Issue #1252648 by cpliakas, Nick_vh: Added Allow for enabling facet blocks on non-search pages.
Issue #1161608 by scor, Nick_vh: Added Index format_username()($account).
Issue #1380448 by Nick_vh | longwave: Fixed Menu item description for /admin/reports/apachesolr.
Issue #1387272 by cpliakas, Nick_vh: Fixed The cancel links and button submission redirects in facet configuration forms are broken.
Issue #1387088 by Nick_vh, swentel: Fixed apachesolr_index_mark_for_reindex() not found during enable/disable and drush can't load apachesolr.index.inc.
Issue #1387628 by Nick_vh: Backport 7.x-1.x to 6.x-3.x.

Apache Solr integration 7.x-1.x-beta13, 2011-12-21
------------------------------
#1376278 by Nick_vh: Fixed Inconsistent behavior of data facets producing unlimited filtering, inconsistent counts, or gap mismatches.
#1372952 by pwolanin | albertosouza: Fixed Wrong variable in apachesolr.module.

Apache Solr integration 7.x-1.0-beta12, 2011-12-12
------------------------------
#1369208 by pwolanin: Add configure links in .info files.
#1369184 by pwolanin: Restore MLT block edit use of block module configure form.
#1369144 by pwolanin: Fix for cleanup settings table and restore cron index operation.
#1353422 by Nick_vh | Marty2081: Added Using view modes in 'more like this" block.
#1212610 by Nick_vh | jeff.maes: Fixed Notice: Undefined index: module in apachesolr_search_form_search_form_alter(). - follow up